MyFirstForceProject/src/objects/Walmart_Pants__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>mapped with Levi&apos;s pants product ID</description>
        <label>Product ID</label>
        <referenceTo>Levi_s_Pants__c</referenceTo>
        <relationshipLabel>Walmart_Pants</relationshipLabel>
        <relationshipName>Walmart_Pants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Walmart_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>discount price in dollars</description>
        <label>Walmart_Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Walmart_FinalPrice__c</fullName>
        <description>discount price</description>
        <formula>Name__r.Pant_price__c   - ( Name__r.Pant_price__c    *   Walmart_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>walmart sale price computed after discount</inlineHelpText>
        <label>Walmart_FinalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Walmart_units__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of units available</description>
        <label>Walmart_units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Walmart Pants</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walmart Pants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>